Minor Fix: css layout overflow on pokemon card

--- a/src/components/PokemonCard/PokemonCard.css
+++ b/src/components/PokemonCard/PokemonCard.css
@@ -2,7 +2,6 @@
     width: 200px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 5px;
-    margin: 5px;
     background-color: #fff;
     cursor: pointer;
 }
@@ -17,7 +16,6 @@
 }
 
 .pokemon_card_preview_info {
-    width: 100%;
     padding: 10px;
 }
 
